# viewtron-python-sdk

./: .gitignore  LICENSE  README.md  client.py  generate-docs.sh  pyproject.toml  test_curl.sh  test_live.py
docs/: client.md  events.md  server.md
src/viewtron/: __init__.py  client.py  events.py  server.py
tests/: test_events.py
