[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viewtron"
version = "1.1.0"
description = "Python SDK for Viewtron IP camera API — parse inbound alarm events and control cameras"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Mike Haldas", email = "mike@cctvcamerapros.net"},
]
keywords = [
    "viewtron", "ip-camera", "security-camera", "lpr", "alpr",
    "license-plate", "face-detection", "home-assistant", "mqtt",
    "webhook", "cctv", "nvr", "surveillance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "xmltodict>=0.13",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/mikehaldas/viewtron-python-sdk"
Documentation = "https://github.com/mikehaldas/IP-Camera-API/blob/main/docs/viewtron-api-guide.md"
Repository = "https://github.com/mikehaldas/viewtron-python-sdk"
Issues = "https://github.com/mikehaldas/viewtron-python-sdk/issues"
"Product Page" = "https://www.Viewtron.com"

[tool.setuptools.packages.find]
where = ["src"]
